removed fullpage.js bug in confirmation screen, z-index for modal to be on top

--- a/src/less/styles-rtv-app.less
+++ b/src/less/styles-rtv-app.less
@@ -340,14 +340,20 @@ li.result-answer{
 }
 
 //overrides react modal
-.ReactModal__Content--after-open {
+.ReactModal__Overlay--after-open {
+    z-index:100;
+}
 
+.ReactModal__Content--after-open {
+    
     @media (min-width: @screen-sm) {
         padding-left:30% !important;
         padding-right:30% !important;
         background: rgba(0,0,0,0.9);
     }
 }
-ReactModalPortal{
+
+
+.ReactModalPortal{
     z-index:1000;
 }
